# omniscan

./: .gitignore  Cargo.toml  README.md
src/: data_structures.rs  main.rs  utils.rs
