[package]
name = "omniscan"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0"}
tokio = { version = "1", features = ["full", "time"] }
regex = "1.10"
lazy_static = "1.5"
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1"}
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
num_cpus = "1.15"
prettytable = "0.10"
indicatif = "0.17"
ctrlc = "3.2"
